--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,5 @@ CONTENTFUL_PREVIEW_SECRET=
 CONTENTFUL_MANAGEMENT_TOKEN=
 CONTENTFUL_TARGET_ENVIRONMENT_ID=
 CONTENTFUL_SOURCE_ENVIRONMENT_ID=
+OPENCAGE_API_KEY=
+NEXT_PUBLIC_BASE_URL=
